# Hands-on-ARM-CPU

./: CMakeLists.txt  README.md  build.sh  build_arm9.sh  build_linux.sh
Linux/hello/: CMakeLists.txt  hello.s
arm926/: .gitignore  CMakeLists.txt  nuc980.md  readme.md
arm926/ch2/c2_1/: mk  t.ld  ts.s
arm926/ch2/c2_2/: mk  t.ld  ts.s
arm926/ch2/c2_3/: mk  t.c  t.ld  ts.s
arm926/ch2/c2_4/: mk  t.c  t.ld  ts.s
arm926/ch2/c2_4_timer/: mk  t.c  t.ld  ts.s
arm926/ch2/c2_4_uart/: mk  t.c  t.ld  ts.s
arm926/hello/: CMakeLists.txt  hello.s
arm926/link/: CMakeLists.txt  data.c  linker.ld  startup.s
arm926/startup/: CMakeLists.txt  linker.ld  startup.s
cmake/: aarch64-linux-gcc.cmake  arm-none-eabi-gcc.cmake
cortex-m/: readme.md
cortex-m/day0_start/: example  readme.md  start.s
cortex-m/day11_task_switch1/: build.sh  cpu.h  cpu.s  link.ld  main.c  readme.md  start.s  task.c  task.h
cortex-m/day1_main/: .gitignore  main.c  readme.md  start.s
cortex-m/day2_section/: dump.txt  link.ld  link2.ld  link3.ld  main.c  main1.c  ramfunc.c  readme.md  start.s  start2.s  start3.s
cortex-m/day3_aapcs/: .gitignore  link.ld  main.c  readme.md  start.s
cortex-m/day4_math/: main.c  readme.md  start.s
cortex-m/day5_fpu/: dump.txt  example.elf  link.ld  main.c  readme.md
cortex-m/day6_exception/: __main.c  dump.txt  example.elf  main.c  readme.md  start.s
cortex-m/day7_systick/: example.elf  exception.c  main.c  mainb.c  readme.md  systick.jdebug
cortex-m/day8_svc/: main.c  readme.md  start.s
cortex-m/day9_pendsv/: .gitignore  main.c  start.s
(+76 files in other folders)
